src/objects/sma__MARelatedList__c.object
<CustomObject>
    <fields>
        <fullName>sma__Column1__c</fullName>
        <label>Column 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Column2__c</fullName>
        <label>Column 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Column3__c</fullName>
        <label>Column 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__ListLabel__c</fullName>
        <label>List Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__NumToDisplay__c</fullName>
        <label>Num To Display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__ReferenceField__c</fullName>
        <label>Reference Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__RelatedSort__c</fullName>
        <label>Sort Related List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__SavedQuery__c</fullName>
        <label>Saved Query</label>
        <referenceTo>sma__MASavedQry__c</referenceTo>
        <relationshipLabel>MapAnything Related Lists</relationshipLabel>
        <relationshipName>MapAnything_Related_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MapAnything Related List</label>
    <nameField>
        <label>Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Related Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>